now we can say something in hindi

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
 </head>
 <body>
     <button id="speakButton">Speak Text</button>
-    <script>
-        document.getElementById('speakButton').addEventListener('click', function () {
-            const textToSpeak = 'Hello, this is a test.';
-            const utterance = new SpeechSynthesisUtterance(textToSpeak);
-            speechSynthesis.speak(utterance);
-        });
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
