first working version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Text-to-Speech Test</title>
 </head>
 <body>
-    <button id="speakButton">Speak Text</button>
+    <div id="content" >
+        <p>नमस्ते! यह एक परीक्षण है। यहाँ कुछ और टेक्स्ट है।</p>
+        
     <script src="index.js"></script>
+
 </body>
 </html>
