--- a/index.html
+++ b/index.html
@@ -3,65 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Children's Story Page</title>
+    <title>Children's Story Website</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <body>
-        <div id="content" class="story-container">
-            <h1 class="story-title">Fanghmir leh Parva </h1>
-            <div class="story-content">
-                <div class="story-paragraph">
-                    <p class="hindi">एक बार एक प्यासा कबूतर पानी पीने के लिए नदी पर उड़ा।</p>
-                    <p class="english">Once a thirsty pigeon flew over a river to drink water.</p>
-                </div>
-                <div class="story-paragraph">
-                    <p class="hindi">पानी पीते समय उसने एक चींटी को पानी पर तैरते देखा।</p>
-                    <p class="english">While drinking, she saw an ant floating on the water.</p>
-                </div>
-                <div class="story-paragraph">
-                    <p class="hindi">उसने तुरन्त पास के पेड़ से एक पत्ता तोड़ा और चींटी की ओर फेंका।</p>
-                    <p class="english">At once, she plucked a leaf from the nearby tree and threw it to the ant.</p>
-                </div>
-
-                <div class="story-paragraph">
-                    <p class="hindi">उसने तुरन्त पास के पेड़ से एक पत्ता तोड़ा और चींटी की ओर फेंका।</p>
-                    <p class="english">At once, she plucked a leaf from the nearby tree and threw it to the ant.</p>
-                </div>
-
-
-                <div class="story-paragraph">
-                    <p class="hindi">उसने चींटी से कहा कि वह पत्ते पर चढ़ जाए।</p>
-                    <p class="english">She told the ant to climb on to the leaf.</p>
-                </div>
-
-
-                <div class="story-paragraph">
-                    <p class="hindi">फिर वह पत्ते को अपनी चोंच में लेकर किनारे पर पहुंची और चींटी बच गई।</p>
-                    <p class="english">Then she took the leaf in her beak and carried it to the bank. The ant was saved.</p>
-                </div>
-
-
-                <div class="story-paragraph">
-                    <p class="hindi">चींटी ने कबूतर को धन्यवाद दिया।</p>
-                    <p class="english">The ant thanked the pigeon.</p>
-                </div>
-
-
-                <div class="story-paragraph">
-                    <p class="hindi">एक दिन, एक शिकारी जंगल में आया। चींटी के टीले के पास बैठी चींटी ने शिकारी को देख लिया।</p>
-                    <p class="english">One day, a hunter came to the forest. The ant sitting near the anthill saw the hunter.</p>
-                </div>
-
-
-                <div class="story-paragraph">
-                    <p class="hindi">वह अपनी बंदूक कबूतर पर तान रहा था जो उसकी उपस्थिति से अनजान था।</p>
-                    <p class="english">He was aiming his gun at the pigeon who was unaware of his presence.</p>
-                </div>
-                
-                <!-- Add more paragraphs here -->
+    <header>
+        <h1>Hindi Chhiar zirna!</h1>
+    </header>
+    <main>
+        <section class="story-list">
+            <h2>Kan thawnthu neihho te</h2>
+            <div class="story-item">
+                <a href="stories/story1/story1.html">Story 1: The Adventures of Tom and Jerry</a>
             </div>
-        </div>
-    <script src="index.js"></script>
+            <div class="story-item">
+                <a href="story2.html">Story 2: The Magical Forest</a>
+            </div>
+            <div class="story-item">
+                <a href="story3.html">Story 3: The Brave Little Penguin</a>
+            </div>
+            <!-- Add more story links as needed -->
+        </section>
+    </main>
 </body>
 </html>
