index file updated

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <header>
         <h1>Hindi Chhiar zirna!</h1>
-    </header>
-    <main>
+    </header>git pus
         <section class="story-list">
             <h2>Kan thawnthu neihho te</h2>
             <div class="story-item">
