malu leh kalu update

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <h1>Hindi Chhiar zirna!</h1>
-    </header>git pus
+    </header>
         <section class="story-list">
             <h2>Kan thawnthu neihho te</h2>
             <div class="story-item">
-                <a href="stories/story1/story1.html">Story 1: The Adventures of Tom and Jerry</a>
+                <a href="stories/story1/story1.html">1: Fanghmir leh Parva</a>
             </div>
             <div class="story-item">
-                <a href="story2.html">Story 2: The Magical Forest</a>
+                <a href="stories/story2/story2.html">Story 2: Maloo leh Kaloo</a>
             </div>
             <div class="story-item">
                 <a href="story3.html">Story 3: The Brave Little Penguin</a>
