new stories added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <header>
         <h1>Hindi Chhiar zirna!</h1>
     </header>
+    <div class="image-container">
+        <img src="images/home.jpg" alt="Free Image" class="full-width-image">
+    </div>
         <section class="story-list">
-            <h2>Kan thawnthu neihho te</h2>
+            <h2 id="title">Kan thawnthu neihho te</h2>
             <div class="story-item">
                 <a href="stories/story1/story1.html">1: Fanghmir leh Parva</a>
             </div>
@@ -19,7 +22,7 @@
                 <a href="stories/story2/story2.html">Story 2: Maloo leh Kaloo</a>
             </div>
             <div class="story-item">
-                <a href="story3.html">Story 3: The Brave Little Penguin</a>
+                <a href="stories/story3/story3.html">Story 3: Meena</a>
             </div>
             <!-- Add more story links as needed -->
         </section>
